<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

    </properties>
    <groupId>com.l2jserver</groupId>
    <artifactId>l2j</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>l2j-server-mmocore</module>
        <module>l2j-server-geo-driver</module>
        <module>l2j-server-commons</module>
        <module>l2j-server-game</module>
        <module>l2j-server-login</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.6.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.l2jserver</groupId>
                <artifactId>l2j-server-geo-driver</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.l2jserver</groupId>
                <artifactId>l2j-server-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.l2jserver</groupId>
                <artifactId>l2j-server-mmocore</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.l2jserver</groupId>
                <artifactId>l2j-server-game</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.aeonbits.owner</groupId>
                <artifactId>owner-java8</artifactId>
                <version>1.0.11</version>
            </dependency>
            <dependency>
                <groupId>org.mdkt.compiler</groupId>
                <artifactId>InMemoryJavaCompiler</artifactId>
                <version>1.3.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
